fix: handle long Last.fm footer text on narrow screens

--- a/themes/vivia/source/css/_partial/footer.styl
+++ b/themes/vivia/source/css/_partial/footer.styl
@@ -9,6 +9,9 @@
   padding: 0 20px
   align-items: center
   height: 72px
+  max-width: 100vw
+  overflow: hidden
+  box-sizing: border-box
   transition: background trans-style, color trans-style
 
   a
@@ -16,11 +19,14 @@
 
   #footer-info
     width: 100%
+    max-width: 100%
     display: flex
     align-items: center
     justify-content: space-between
     gap: 16px
     min-width: 0
+    overflow: hidden
+    box-sizing: border-box
 
   .footer-left
     min-width: 0
@@ -32,11 +38,13 @@
     flex: 0 1 auto
     margin-left: auto
     max-width: 55%
-    display: inline-block
+    min-width: 0
+    display: block
     text-align: right
     overflow: hidden
     text-overflow: ellipsis
     white-space: nowrap
+    box-sizing: border-box
 
   @media mq-mobile
     #footer-info
@@ -45,6 +53,8 @@
       gap: 4px
 
     .footer-now-playing
-      margin-left: 0
+      width: 100%
       max-width: 100%
+      min-width: 0
+      margin-left: 0
       text-align: left
